kubernetes/apps/base/flux-system/addons/ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-webhook
spec:
  ingressClassName: ${INGRESSCLASS}
  rules:
    - host: "${SUBDOMAIN}.${INTERNALDOMAIN}"
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
